--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -88,7 +88,7 @@ html{
         }
     }
 }
-.newArrivals, .bestSellers{
+.newArrivals, .bestSellers, .containerStore{
     max-width: 1300px;
     margin: 0 auto;
 }
