--- a/views/store.html
+++ b/views/store.html
@@ -76,29 +76,29 @@
 
     <!-- Main -->
 
-    <section class="arrowUp">
-        <a href="index.html#heroSection" class="directionUp">
-            <img src="img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
-        </a>
-    </section>
+    <main class="containerStore">
 
-    <!-- Skull SocialMedia -->
+        <section class="arrowUp">
+            <a href="store.html#header" class="directionUp">
+                <img src="../img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
+            </a>
+        </section>
 
-    <section class="skullSocialMedia">
-        <article class="socialMedia">
-            <img src="img/skull.svg" alt="" class="skullIcon">
-            <ul>
-                <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="img/instagram.svg" alt="" class="itemSocial"></a></li>
-                <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="img/youtube.svg" alt="" class="itemSocial"></a></li>
-                <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="img/facebook.svg" alt="" class="itemSocial"></a></li>
-                <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="img/twitter.svg" alt="" class="itemSocial"></a></li>
-                <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="img/pinterest.svg" alt="" class="itemSocial"></a></li>
-            </ul>
-        </article>
-    </section>
+        <!-- Skull SocialMedia -->
 
+        <section class="skullSocialMedia">
+            <article class="socialMedia">
+                <img src="../img/skull.svg" alt="" class="skullIcon">
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="../img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </article>
+        </section>
 
-    <main class="mainContainer">
 
         <!-- Filter -->
 
@@ -107,16 +107,16 @@
 
             <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
                 <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdroped with scrolling</h5>
-                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdroped with scrolling</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                  <p>Try scrolling the rest of the page to see this option in action.</p>
+                    <p>Try scrolling the rest of the page to see this option in action.</p>
                 </div>
             </div>
         </section>
 
-        <secion class="cart">
+        <section class="cart">
             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
 
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
@@ -128,7 +128,7 @@
                 ...
             </div>
             </div>
-        </secion>
+        </section>
 
         <section class="whishList">
             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
