--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -1,6 +1,4 @@
 .containerStore{
-    width:100%;
-    height: auto;
     margin: 150px auto;
     .sectionCard{
         .cardProducts{
@@ -82,6 +80,81 @@
             background-color:#BC2327 ;
             box-shadow: 0 0 4px 2px rgb(112, 112, 112);
             text-decoration: underline;
+        }
+    }
+    .tagGetOff{
+        position: fixed;
+        top:35%;
+        right:0%;
+        background-color: black;
+        transform: rotate(180deg);
+        z-index: 10;
+        cursor: pointer;
+        box-shadow: 0 0 6px 4px #1f1f1f;
+        .discountGetOff{
+            text-decoration: none;
+            // padding: 40px 15px;
+            .discount{
+                width:auto;
+                height: auto;
+                .title{
+                    font-size:1rem;
+                    font-family: $fontJura;
+                    color: #ffffff;
+                    text-align: center;
+                    writing-mode: vertical-rl;
+                    text-orientation: right;
+                    transform: rotate(180deg);
+                    font-weight: 600;
+                    padding: 40px 15px;
+                }
+            }
+        }
+    }
+    .arrowUp{
+        position: fixed;
+        bottom:30px;
+        right:30px;
+        z-index: 8;
+        .directionUp{
+            .arrowUpIcon{
+                width:45px;
+                border-radius: 50%;
+                border: 2px solid white;
+                transition: all 0.3s ease;
+                &:hover{
+                    background-color: #BC2327;
+                    border: 2px solid #BC2327;
+                }
+            }
+        }
+    }
+    .skullSocialMedia{
+        position: fixed;
+        bottom:30px;
+        left:30px;
+        cursor: pointer;
+        z-index: 8;
+        .socialMedia{
+            .skullIcon{
+                width:45px;
+            }
+            ul{
+                display: none;
+                position: relative;
+                bottom:58px;
+                left:30px;
+                li{
+                    list-style-type: none;
+                    .item{
+                        .itemSocial{
+                            width:40px;
+                            text-decoration: none;
+                            margin:5px 0px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
