Add taggetoff - delete filter & favorities & cart

--- a/views/store.html
+++ b/views/store.html
@@ -78,8 +78,10 @@
 
     <main class="containerStore">
 
+        <!-- ArrowUp -->
+
         <section class="arrowUp">
-            <a href="store.html#header" class="directionUp">
+            <a href="#" class="directionUp">
                 <img src="../img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
             </a>
         </section>
@@ -99,49 +101,29 @@
             </article>
         </section>
 
+        <!-- Tag GetOff -->
+
+        <section class="tagGetOff">
+            <a href="#" class="discountGetOff">
+                <article class="discount">
+                    <h2 class="title">Get 25% Off</h2>
+                </article>
+            </a>
+        </section>
+
 
         <!-- Filter -->
 
         <section class="filter">
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
 
-            <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdroped with scrolling</h5>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <p>Try scrolling the rest of the page to see this option in action.</p>
-                </div>
-            </div>
         </section>
 
         <section class="cart">
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
 
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-            <div class="offcanvas-header">
-                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                ...
-            </div>
-            </div>
         </section>
 
         <section class="whishList">
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
 
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-            <div class="offcanvas-header">
-                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                ...
-            </div>
-            </div>
         </section>
 
         <!-- Store -->
