--- a/views/store.html
+++ b/views/store.html
@@ -103,8 +103,12 @@
 
         <!-- Filter -->
 
-        <section class="filter">
-
+        <section class="sectionFilter">
+            <div class="filter">
+                <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
+                <p class="filterParagraph">Filter</p>
+            </div>
+            <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"</p>
         </section>
 
         <section class="cart">
@@ -117,7 +121,7 @@
 
         <!-- Store -->
 
-        <section class="containerStore">
+        <section class="sectionStore">
             <div class="sectionCard d-flex flex-row">
                 <article class="cardProducts m-2">
                     <dic class="article">
