--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -92,7 +92,12 @@
             padding-bottom: 5px;
         }
         .developer{
-            text-align: center;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 5px;
             border-top: 1px solid rgb(61, 61, 61);
             p{
                 font-family: $fontJura;
