--- a/views/store.html
+++ b/views/store.html
@@ -104,11 +104,32 @@
         <!-- Filter -->
 
         <section class="sectionFilter">
-            <div class="filter">
-                <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                <p class="filterParagraph">Filter</p>
-            </div>
-            <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"</p>
+            <article class="menuFilterSide">
+                <div class="filter">
+                    <input id="filterSide" type="checkbox">
+                    <label for="FilterSide" class="headLine">
+                        <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
+                        <p class="filterParagraph">Filter</p>
+                    </label>
+                    <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"</p>
+                </div>
+                <nav class="menuFilter">
+                    <section class="availability">
+                        <label for="FilterSide">
+                            <img class="close" src="../img/close_Cross.svg" alt="Close cross icon">
+                        </label>
+                    </section>
+                    <section class="menu">
+                        <ul>
+                            <li><a href="sign_In.html" class="link">Sign in</a></li>
+                            <li><a href="#" class="link">My cart</a></li>
+                            <li><a href="../index.html" class="link">Home</a></li>
+                            <li><a href="store.html" class="link">Store</a></li>
+                            <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
+                        </ul>
+                    </section>
+                </nav>
+            </article>
         </section>
 
         <section class="cart">
