--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -118,27 +118,21 @@
         .menuFilterSide{
             width: 100%;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: space-between;
-            align-items: flex-start;
-            .filter{
-                width: inherit;
-                display: flex;
-                flex-direction: row;
-                flex-wrap: nowrap;
-                justify-content: space-between;
-                align-items:center;
-                #filterSide{
-                    display: none;
-                    &:checked ~ .menuFilter{
-                        transform: translate(0%);
-                    }
+            align-items: center;
+            #filterSide{
+                display: none;
+                &:checked ~ .menuFilter{
+                    transform: translate(0%);
                 }
-                .headLine{
+            }
+            .headLine{
+                .filter{
                     display: flex;
                     flex-direction: row;
                     flex-wrap: nowrap;
-                    justify-content: flex-start;
+                    justify-content: center;
                     align-items: center;
                     padding: 5px;
                     cursor:pointer;
@@ -168,11 +162,49 @@
                     margin: 5px;
                 }
             }
-            .menufilter{
-                width:30vw;
-                height:100vh;
+            .menuFilter{
+                width:20vw;
+                height: 100vh;
+                display:flex;
+                position: fixed;
+                top:0;
+                left:0;
+                z-index: 10px;
+                flex-direction: column;
+                justify-content:space-between;
+                align-items: flex-start;
                 background-color: #ffffff;
-
+                overflow: hidden;
+                box-shadow: 0 0 10px 6px #070707;
+                z-index: 10;
+                transform: translate(-100%);
+                transition: .3s ease-in-out;
+                label{
+                    .closeCross{
+                        width:20px;
+                        cursor: pointer;
+                        transform: scale(100%);
+                        transition: all 0.3s ease-in-out;
+                    }
+                }
+                .choiceFilter{
+                    ul{
+                        li{
+                            list-style-type: none;
+                            padding: 10px 0px;
+                            .link{
+                                text-decoration: none;
+                                color:rgb(194, 193, 193);
+                                font-size: .9rem;
+                                font-family: $fontJura;transition:all .5s;
+                                &:hover{
+                                    text-decoration: underline;
+                                    filter: drop-shadow(0 0 6px #BC2327);
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }
