--- a/views/store.html
+++ b/views/store.html
@@ -105,21 +105,21 @@
 
         <section class="sectionFilter">
             <article class="menuFilterSide">
-                <div class="filter">
-                    <input id="filterSide" type="checkbox">
-                    <label for="FilterSide" class="headLine">
+                <input id="filterSide" type="checkbox">
+                <label for="filterSide" class="headLine">
+                    <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterParagraph">Filter</p>
-                    </label>
-                    <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"</p>
-                </div>
+                        <p class="filterParagraph">Filter</p>                      </label>
+                    </div>
+                </label>
+                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
+                </p>
                 <nav class="menuFilter">
-                    <section class="availability">
-                        <label for="FilterSide">
-                            <img class="close" src="../img/close_Cross.svg" alt="Close cross icon">
+                        <label for="filterSide">
+                            <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                         </label>
-                    </section>
-                    <section class="menu">
+
+                    <div class="choiceFilter">
                         <ul>
                             <li><a href="sign_In.html" class="link">Sign in</a></li>
                             <li><a href="#" class="link">My cart</a></li>
@@ -127,7 +127,7 @@
                             <li><a href="store.html" class="link">Store</a></li>
                             <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
                         </ul>
-                    </section>
+                    </div>
                 </nav>
             </article>
         </section>
